@@ -1,3 +1,8 @@
+2004-06-30  James E Wilson  <wilson@specifixinc.com>
+
+	* elfxx-ia64.c (elfNN_ia64_check_relocs): New local pltoff.  Initialize
+	to NULL.  Call get_pltoff if NULL and NEED_PLTOFF is true.
+
 2004-06-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR 233
